--- a/nodes/klicktipp-resend-autoresponder.html
+++ b/nodes/klicktipp-resend-autoresponder.html
@@ -1,12 +1,20 @@
 <script type="text/x-red" data-template-name="klicktipp resend autoresponder">
 	<div class="form-row">
-	       <label for="node-input-klicktipp"><i class="fa fa-user"></i> <span>KlickTipp Config</span></label>
-	       <input type="text" id="node-input-klicktipp" data-i18n="config node">
-	   </div>
-	   <div class="form-row">
-	       <label for="node-input-name"><i class="fa fa-tag"></i> <span>Name</span></label>
-	       <input type="text" id="node-input-name" placeholder="Enter node name">
-	   </div>
+	   <label for="node-input-klicktipp"><i class="fa fa-user"></i> <span>KlickTipp Config</span></label>
+	   <input type="text" id="node-input-klicktipp" data-i18n="config node">
+	</div>
+	<div class="form-row">
+		<label for="node-input-email"><i class="fa fa-envelope"></i> <span>Email</span></label>
+		<input type="text" id="node-input-email" placeholder="Enter email address">
+	</div>
+	<div class="form-row">
+		<label for="node-input-autoresponder"><i class="fa fa-mobile"></i> <span>Autoresponder</span></label>
+		<input type="text" id="node-input-autoresponder" placeholder="Enter the ID of the autoresponder (optional)">
+	</div>
+	<div class="form-row">
+		<label for="node-input-name"><i class="fa fa-tag"></i> <span>Name</span></label>
+		<input type="text" id="node-input-name" placeholder="Enter node name">
+	</div>
 </script>
 
 <script type="text/x-red" data-help-name="klicktipp resend autoresponder">
@@ -68,6 +76,22 @@
 		defaults: {
 			klicktipp: { type: 'klicktipp-config', required: true },
 			name: { value: '' },
+			autoresponder: {
+				value: '',
+				validate: RED.validators.number()
+			},
+			email: {
+				value: '',
+				validate: function(email) {
+					// If email is empty, skip validation
+					if (!email) {
+						return true;
+					}
+					// Apply regex validation only if email is provided
+					const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+					return emailRegex.test(email);
+				},
+			}
 		},
 		inputs: 1,
 		outputs: 1,
