--- a/nodes/klicktipp-subscription-process-get.html
+++ b/nodes/klicktipp-subscription-process-get.html
@@ -1,12 +1,16 @@
 <script type="text/x-red" data-template-name="klicktipp subscription process get">
 	<div class="form-row">
-	       <label for="node-input-klicktipp"><i class="fa fa-user"></i> <span>KlickTipp Config</span></label>
-	       <input type="text" id="node-input-klicktipp" data-i18n="config node">
-	   </div>
-	   <div class="form-row">
-	       <label for="node-input-name"><i class="fa fa-tag"></i> <span>Name</span></label>
-	       <input type="text" id="node-input-name" placeholder="Enter node name">
-	   </div>
+	   <label for="node-input-klicktipp"><i class="fa fa-user"></i> <span>KlickTipp Config</span></label>
+	   <input type="text" id="node-input-klicktipp" data-i18n="config node">
+	</div>
+	<div class="form-row">
+		<label for="node-input-listId"><i class="fa fa-tags""></i> <span>List ID</span></label>
+		<input type="text" id="node-input-listId" placeholder="Enter list ID (required)">
+	</div>
+	<div class="form-row">
+	   <label for="node-input-name"><i class="fa fa-tag"></i> <span>Name</span></label>
+	   <input type="text" id="node-input-name" placeholder="Enter node name">
+	</div>
 </script>
 
 <script type="text/x-red" data-help-name="klicktipp subscription process get">
@@ -70,6 +74,10 @@
 		color: '#F2F2F2',
 		defaults: {
 			klicktipp: { type: 'klicktipp-config', required: true },
+			listId: {
+				value: '',
+				validate: RED.validators.number()
+			},
 			name: { value: '' },
 		},
 		inputs: 1,
