--- a/nodes/klicktipp-tag-update.html
+++ b/nodes/klicktipp-tag-update.html
@@ -4,6 +4,18 @@
 	    <input type="text" id="node-input-klicktipp" data-i18n="config node">
 	</div>
 	<div class="form-row">
+	    <label for="node-input-tagId"><i class="fa fa-envelope"></i> <span>Tag ID</span></label>
+	    <input type="text" id="node-input-tagId" placeholder="Enter tag ID">
+	</div>
+	<div class="form-row">
+		<label for="node-input-tagName"><i class="fa fa-tags""></i> <span>Name</span></label>
+		<input type="text" id="node-input-tagName" placeholder="Enter name (required)">
+	</div>
+	<div class="form-row">
+		<label for="node-input-tagDescription"><i class="fa fa-tags""></i> <span>Description</span></label>
+		<input type="text" id="node-input-tagDescription" placeholder="Enter description (optional)">
+	</div>
+	<div class="form-row">
 	    <label for="node-input-name"><i class="fa fa-tag"></i> <span>Name</span></label>
 	    <input type="text" id="node-input-name" placeholder="Enter node name">
 	</div>
@@ -74,6 +86,13 @@
 		defaults: {
 			klicktipp: { type: 'klicktipp-config', required: true },
 			name: { value: '' },
+			tagId: {
+				value: '',
+				validate: RED.validators.number()
+			},
+			//tagName is used to avoid conflict with the Node-RED core name property
+			tagName: { value: '' },
+			tagDescription: { value: '' },
 		},
 		inputs: 1,
 		outputs: 1,
