--- a/nodes/klicktipp-unsubscribe.html
+++ b/nodes/klicktipp-unsubscribe.html
@@ -4,6 +4,10 @@
 	    <input type="text" id="node-input-klicktipp" data-i18n="config node">
 	</div>
 	<div class="form-row">
+	    <label for="node-input-email"><i class="fa fa-envelope"></i> <span>Email</span></label>
+	    <input type="text" id="node-input-email" placeholder="Enter email address">
+	</div>
+	<div class="form-row">
 	    <label for="node-input-name"><i class="fa fa-tag"></i> <span>Name</span></label>
 	    <input type="text" id="node-input-name" placeholder="Enter node name">
 	</div>
@@ -71,6 +75,18 @@
 		color: '#F2F2F2',
 		defaults: {
 			klicktipp: { type: 'klicktipp-config', required: true },
+			email: {
+				value: '',
+				validate: function(email) {
+					// If email is empty, skip validation
+					if (!email) {
+						return true;
+					}
+					// Apply regex validation only if email is provided
+					const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+					return emailRegex.test(email);
+				}
+			},
 			name: { value: '' },
 		},
 		inputs: 1,
