--- a/nodes/klicktipp-signin.html
+++ b/nodes/klicktipp-signin.html
@@ -179,7 +179,7 @@
 			return this.name || 'KlickTipp Signin';
 		},
 		oneditprepare: function() {
-			// Toggle Address section visibility
+			// Toggle section visibility
 			const checkbox = $('#toggle-contact-fields-section');
 			const contactFieldsSection = $('#contact-fields-section');
 
