--- a/nodes/klicktipp-subscribe.html
+++ b/nodes/klicktipp-subscribe.html
@@ -199,7 +199,7 @@
 			return this.name || 'KlickTipp Subscribe';
 		},
 		oneditprepare: function() {
-			// Toggle Address section visibility
+			// Toggle section visibility
 			const checkbox = $('#toggle-contact-fields-section');
 			const contactFieldsSection = $('#contact-fields-section');
 
