--- a/nodes/klicktipp-subscriber-update.html
+++ b/nodes/klicktipp-subscriber-update.html
@@ -193,7 +193,7 @@
 			return this.name || 'KlickTipp Subscriber Update';
 		},
 		oneditprepare: function() {
-			// Toggle Address section visibility
+			// Toggle section visibility
 			const checkbox = $('#toggle-contact-fields-section');
 			const contactFieldsSection = $('#contact-fields-section');
 
