--- a/nodes/klicktipp-signoff.html
+++ b/nodes/klicktipp-signoff.html
@@ -69,15 +69,7 @@
 			apiKey: { value: '' },
 			email: {
 				value: '',
-				validate: function(email) {
-					// If email is empty, skip validation
-					if (!email) {
-						return true;
-					}
-					// Apply regex validation only if email is provided
-					const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
-					return emailRegex.test(email);
-				}
+				validate: validateEmail
 			},
 			name: { value: '' },
 		},
