--- a/nodes/klicktipp-unsubscribe.html
+++ b/nodes/klicktipp-unsubscribe.html
@@ -77,15 +77,7 @@
 			klicktipp: { type: 'klicktipp-config', required: true },
 			email: {
 				value: '',
-				validate: function(email) {
-					// If email is empty, skip validation
-					if (!email) {
-						return true;
-					}
-					// Apply regex validation only if email is provided
-					const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
-					return emailRegex.test(email);
-				}
+				validate: validateEmail
 			},
 			name: { value: '' },
 		},
