--- a/nodes/klicktipp-subscribe.html
+++ b/nodes/klicktipp-subscribe.html
@@ -16,7 +16,7 @@
 	    <input type="text" id="node-input-listId" placeholder="Enter List ID (optional)">
 	</div>
 	<div class="form-row">
-	    <label for="node-input-tagId"><i class="fa fa-tags"></i> <span>Tag ID</span></label>
+	    <label for="node-input-tagId"><i class="fa fa-tag""></i> <span>Tag ID</span></label>
 	    <input type="text" id="node-input-tagId" placeholder="Enter Tag ID (optional)">
 	</div>
 	<!-- Toggle for Address section -->
