--- a/nodes/klicktipp-tag-delete.html
+++ b/nodes/klicktipp-tag-delete.html
@@ -4,7 +4,7 @@
 	    <input type="text" id="node-input-klicktipp" data-i18n="config node">
 	</div>
 	<div class="form-row">
-	    <label for="node-input-tagId"><i class="fa fa-envelope"></i> <span>Tag ID</span></label>
+	    <label for="node-input-tagId"><i class="fa fa-tag""></i> <span>Tag ID</span></label>
 	    <input type="text" id="node-input-tagId" placeholder="Enter tag ID">
 	</div>
 	<div class="form-row">
