--- a/nodes/klicktipp-untag-email.html
+++ b/nodes/klicktipp-untag-email.html
@@ -8,7 +8,7 @@
 	    <input type="text" id="node-input-email" placeholder="Enter email address">
 	</div>
 	<div class="form-row">
-	    <label for="node-input-tagId"><i class="fa fa-envelope"></i> <span>Tag ID</span></label>
+	    <label for="node-input-tagId"><i class="fa fa-tag""></i> <span>Tag ID</span></label>
 	    <input type="text" id="node-input-tagId" placeholder="Enter tag ID">
 	</div>
 	<div class="form-row">
