--- a/nodes/klicktipp-untag-email.html
+++ b/nodes/klicktipp-untag-email.html
@@ -7,10 +7,12 @@
 	    <label for="node-input-email"><i class="fa fa-envelope"></i> <span>Email</span></label>
 	    <input type="text" id="node-input-email" placeholder="Enter email address">
 	</div>
-	<div class="form-row">
-	    <label for="node-input-tagId"><i class="fa fa-tag""></i> <span>Tag ID</span></label>
-	    <input type="text" id="node-input-tagId" placeholder="Enter tag ID">
-	</div>
+    <div class="form-row">
+        <label for="node-input-tagId"><i class="fa fa-tag"></i> <span>Tag</span></label>
+        <select id="node-input-tagId">
+            <!-- Tags will be populated here -->
+        </select>
+    </div>
 	<div class="form-row">
 	    <label for="node-input-name"><i class="fa fa-tag"></i> <span>Name</span></label>
 	    <input type="text" id="node-input-name" placeholder="Enter node name">
@@ -96,5 +98,14 @@
 		label: function () {
 			return this.name || 'KlickTipp Untag Email';
 		},
+		oneditprepare: function() {
+			const tagDropdown = $('#node-input-tagId');
+			populateDropdown(tagDropdown, this.tagId, '/klicktipp/tags');
+		},
+		// When the node editor is saved, capture the selected tagId
+		oneditsave: function() {
+			console.log('Save this: ' + $('#node-input-tagId').val());
+			this.tagId = Number($('#node-input-tagId').val()); // Save the selected tagId
+		}
 	});
 </script>
