Added the prefix for the global reusable functions. Enhanced custom fields logic. Removed the hardcoded contact fields list

--- a/nodes/klicktipp-signin.html
+++ b/nodes/klicktipp-signin.html
@@ -77,7 +77,7 @@
 			apiKey: { value: '' },
 			email: {
 				value: '',
-				validate: validateEmail
+				validate: ktValidateEmail
 			},
 			smsNumber: { value: '' },
 			fields: {
@@ -93,7 +93,7 @@
 		},
 		oneditprepare: function() {
 			const contactListContainer = $('#contact-fields-section');
-			populateContactFields(contactListContainer, this.fields);
+			ktPopulateContactFields(contactListContainer, this.fields);
 		},
 		// When the node editor is saved, capture the selected tagId
 		oneditsave: function() {
