--- a/nodes/klicktipp-subscriber-search.html
+++ b/nodes/klicktipp-subscriber-search.html
@@ -76,7 +76,7 @@
 			klicktipp: { type: 'klicktipp-config', required: true },
 			email: {
 				value: '',
-				validate: validateEmail
+				validate: ktValidateEmail
 			},
 			name: { value: '' },
 		},
