--- a/nodes/klicktipp-unsubscribe.html
+++ b/nodes/klicktipp-unsubscribe.html
@@ -77,7 +77,7 @@
 			klicktipp: { type: 'klicktipp-config', required: true },
 			email: {
 				value: '',
-				validate: validateEmail
+				validate: ktValidateEmail
 			},
 			name: { value: '' },
 		},
