--- a/nodes/klicktipp-signout.html
+++ b/nodes/klicktipp-signout.html
@@ -69,7 +69,7 @@
 			apiKey: { value: '' },
 			email: {
 				value: '',
-				validate: validateEmail
+				validate: ktValidateEmail
 			},
 			name: { value: '' },
 		},
