--- a/nodes/klicktipp-subscription-process-get-redirect.html
+++ b/nodes/klicktipp-subscription-process-get-redirect.html
@@ -84,7 +84,7 @@
 			klicktipp: { type: 'klicktipp-config', required: true },
 			email: {
 				value: '',
-				validate: validateEmail
+				validate: ktValidateEmail
 			},
 			listId: {
 				value: '',
@@ -100,7 +100,7 @@
 		},
 		oneditprepare: function() {
 			const listIdDropdown = $('#node-input-listId');
-			populateDropdown(listIdDropdown, this.listId, '/klicktipp/subscription-process');
+			ktPopulateDropdown(listIdDropdown, this.listId, '/klicktipp/subscription-process');
 		},
 		// When the node editor is saved, capture the selected tagId
 		oneditsave: function() {
