--- a/nodes/klicktipp-signin.html
+++ b/nodes/klicktipp-signin.html
@@ -11,12 +11,7 @@
 	    <label for="node-input-smsNumber"><i class="fa fa-mobile"></i> <span>SMS Number</span></label>
 	    <input type="text" id="node-input-smsNumber" placeholder="Enter SMS number (optional)">
 	</div>
-	<!-- Toggle for Address section -->
-	<div class="form-row">
-    	<label for="toggle-contact-fields-section"><i class="fa fa-list"></i> <span>Fields</span></label>
-    	<input type="checkbox" id="toggle-contact-fields-section">
-	</div>
-	<div id="contact-fields-section" style="display: none;"></div>
+	<div id="contact-fields-section"></div>
 	<div class="form-row">
 	    <label for="node-input-name"><i class="fa fa-tag"></i> <span>Name</span></label>
 	    <input type="text" id="node-input-name" placeholder="Enter node name">
