Added high order function to handle login/logout for each node. Wrapper each node in the high order function. Removed autologout functionality. Removed login/logout nodes

--- a/nodes/klicktipp-resend-autoresponder.html
+++ b/nodes/klicktipp-resend-autoresponder.html
@@ -77,7 +77,7 @@
 			klicktipp: { type: 'klicktipp-config', required: true },
 			name: { value: '' },
 			autoresponder: {
-				value: '',
+				value: 0,
 				validate: RED.validators.number()
 			},
 			email: {
